force-app/main/default/objects/RS_DynamicSearch__mdt/RS_DynamicSearch__mdt.object-meta.xml
<CustomObject>
    <label>RS_DynamicSearch</label>
    <pluralLabel>RS_DynamicSearch</pluralLabel>
</CustomObject>