force-app/main/default/objects/RS_DynamicSearch__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>