force-app/main/default/objects/RS_DynamicSearch__mdt/fields/isDisabled__c.field-meta.xml
<CustomField>
    <fullName>isDisabled__c</fullName>
    <label>isDisabled</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>