force-app/main/default/objects/RS_DynamicSearch__mdt/fields/Lookup_Field_to_Link__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_to_Link__c</fullName>
    <label>Lookup Field to Link</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>